# rust-api-starter

./: Cargo.toml  README.md  config.toml  docker-compose.yml
migrations/2024-12-24-202525_create_users/: up.sql
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs  server.rs
src/api/: posts.rs  users.rs
src/models/: user.rs
src/util/: auth.rs  db.rs  error.rs  mod.rs  token.rs
