[package]
name = "rust-api-starter"
version = "0.1.0"
edition = "2021"
authors = ["Faisal Al-Tameemi <faisal.al.tameemi@gmail.com>"]

[dependencies]
actix = "0.13"
actix-web = "4.4"
r2d2 = "0.8.10"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
actix-rt = "2.9.0"
config = "0.15.4"
dotenv = "0.14.1"
once_cell = "1.18.0"
actix-web-validator = "6.0.0"
validator = { version = "0.18.1", features = ["derive"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "chrono"] }
thiserror = "2.0.9"
pq = "1.4.3"
chrono = { version = "0.4.39", features = ["serde"] }
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
